--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -6,6 +6,8 @@ import Head from "../../components/Head.astro";
 import Header from "../../components/Header.astro";
 import Hero from "../../components/Hero.astro";
 import About from "../../components/About.astro";
+import DailyMenu from "../../components/DailyMenu.astro";
+import Menu from "../../components/Menu.astro";
 import Footer from "../../components/Footer.astro";
 
 changeLanguage("en");
@@ -17,6 +19,8 @@ changeLanguage("en");
 		<Header />
 		<Hero />
 		<About />
+		<DailyMenu />
+		<Menu />
 		<Footer />
 	</body>
 </html>
