--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,9 @@ changeLanguage("cs");
 		<Header />
 		<Hero />
 		<About />
-		<DailyMenu />
 		<Menu />
+		<DailyMenu />
 		<Footer />
+		<script src="../assets/js/global.js"></script>
 	</body>
 </html>
