--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ changeLanguage("cs");
 		<Hero />
 		<About />
 		<Menu />
-		<DailyMenu />
+		<!-- <DailyMenu /> -->
 		<Footer />
 		<script src="../assets/js/global.js"></script>
 	</body>
