--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -3,6 +3,7 @@
 import img1 from "../assets/img/body/20221027vezenska_piatti_12.jpg"
 import img2 from "../assets/img/body/20221027vezenska_piatti_2_square.jpg"
 import img3 from "../assets/img/hero/unused/invitaly_vezenska_16.jpg"
+import Arrow from "./snippets/Arrow.astro";
 
 interface Props {
   menuUrl?: string;
@@ -16,13 +17,7 @@ const { menuUrl = "https://invitaly.cz/files/menu_vezenska.pdf" } = Astro.props;
       <h2>Our Menu</h2>
       <p>Sit tempora minus asperiores blanditiis autem non beatae incidunt, est nobis aperiam neque alias, esse earum eaque consectetur corrupti numquam odit officia.</p>
     </div>
-    <div class="arrow">
-      <div class="arrow__body"></div>
-      <div class="arrow__head">
-        <span class="part-one"></span>
-        <span class="part-two"></span>
-      </div>
-    </div>
+    <Arrow />
   </a>
   <div class="gallery">
     <div class="zoom observe">
@@ -36,6 +31,37 @@ const { menuUrl = "https://invitaly.cz/files/menu_vezenska.pdf" } = Astro.props;
 
 <style>
 
+  a {
+    border-block: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: var(--gutter-l);
+    padding: var(--gutter-l);
+
+    & h2 {
+      transition: all 0.3s ease-in;
+    }
+    
+    &:hover {
+      background-color: var(--c-black-99);
+
+      & h2 {
+        color: var(--c-primary-hover);
+      }
+    }
+  }
+  @media (width < 769px) {
+    a {
+      flex-direction: column;
+      align-items: flex-start;
+      padding-inline: 0;
+    }
+  }
+  p {
+    max-width: 600px;
+  }
+
   .gallery {
     display: flex;
     gap: var(--gutter-l);
@@ -48,57 +74,6 @@ const { menuUrl = "https://invitaly.cz/files/menu_vezenska.pdf" } = Astro.props;
         object-fit: cover;
       }
     }
-    /* & > div:nth-child(2n) {
-      margin-top: 2rem;
-    } */
   }
-
-  a {
-    border-block: 1px solid #ccc;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: var(--gutter-l);
-    padding-block: var(--gutter-l);
-    
-    &:hover {
-      background-color: #f5f5f5;
-    }
-  }
-
-  p {
-    max-width: 600px;
-  }
-
-  /* Arrow */
-  .arrow {
-    & .arrow__body {
-      width: 100px;
-      height: 1px;
-      display: flex;
-      background-color: black;
-    }
-    & .arrow__head {
-      position: relative;
-
-      & > * {
-        position: absolute;
-        right: -3px;
-        bottom: 0;
-        width: 20px;
-        height: 1px;
-        background-color: black;
-
-        &.part-one {
-          transform: rotate(45deg);
-          top: -7px;
-        }
-        &.part-two {
-          transform: rotate(-45deg);
-          bottom: -7px;
-        }
-      }
-    }
-  }
-
+  
 </style>
