--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,9 +19,9 @@ changeLanguage("cs");
 	<body>
 		<Header />
 		<Hero />
+		<DailyMenu />
 		<About />
 		<Menu />
-		<!-- <DailyMenu /> -->
 		<Footer />
 		<script src="../assets/js/global.js"></script>
 	</body>
