--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,7 +1,8 @@
 ---
 import img1 from "../assets/img/body/20221027vezenska_piatti_12.jpg"
-import img2 from "../assets/img/body/20221027vezenska_piatti_2_square.jpg"
+import img2 from "../assets/img/body/20221027vezenska_piatti_3.jpg"
 import img3 from "../assets/img/hero/unused/invitaly_vezenska_16.jpg"
+import img4 from "../assets/img/body/INV2-217_064.jpg"
 ---
 
 <section class="grid container" id="about">
@@ -11,8 +12,8 @@ import img3 from "../assets/img/hero/unused/invitaly_vezenska_16.jpg"
     <p>Cum facere tempora dolor nam! Dicta non suscipit cumque rerum maiores ipsa accusantium esse error, soluta pariatur cum repudiandae at magni ducimus aliquam temporibus repellendus minima ex fugit, neque tempora.</p>
   </div>
   <div class="img1 toRight observe"><img src={img1} alt="Invitaly"></div>
-  <div class="img2 zoom observe"><img src={img2} alt="Invitaly"></div>
-  <div class="img3 zoom observe"><img src={img3} alt="Invitaly"></div>
+  <div class="img2 zoom observe"><img src={img4} alt="Invitaly"></div>
+  <div class="img3 zoom observe"><img src={img2} alt="Invitaly"></div>
 </section>
 
 <style>
@@ -24,20 +25,22 @@ import img3 from "../assets/img/hero/unused/invitaly_vezenska_16.jpg"
   }
   
   /* animations */
-  .img3, .img3 img {
-    animation-delay: 0.3s;
-  }
+  /* .img3, .img3 img {
+    animation-delay: 0.1s;
+  } */
 
   @media (width >= 1024px) {
     .description {
       grid-column: 1 / 6;
       grid-row: 2 / 3;
     }
+    .img1, .img2, .img3 {
+      width: 100%;
+      height: 100%;
+    } 
     .img1 {
       grid-column: 6 / 13;
       grid-row: 2 / 4;
-      aspect-ratio: 3 / 4;
-      object-fit: cover;
     }
     .img2 {
       grid-column: 1 / 6;
