--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,35 +1,24 @@
 ---
 import { t } from "i18next";
 import TopNav from "./snippets/TopNav.astro";
-import Reservation from "./snippets/Reservation.astro";
-import Address from "./snippets/Address.astro";
 
-import LanguageSelector from "./snippets/LanguageSelector.astro";
-
-import logo from '../assets/img/branding/invitaly_logo--small.svg'
+import Logo from "./snippets/Logo.astro";
+import MobileMenu from "./snippets/Mobile-menu.astro";
 
 const { pathname } = Astro.url;
 
 ---
 
-<header class="container">
-  <nav class="desktop-menu">
-    <TopNav />
-  </nav>
-  <a class="logo" href={pathname}>
-    <img src={logo} alt="Invitaly logo" width="100" height="54">
-  </a>
-  <!-- <div class="overlay"></div> -->
-  <nav class="mobile-menu">
-    <section class="grid container">
-      <TopNav mobile />
-      <Reservation />
-      <Address />
-    </section>
-    <!-- <a href="#" class="order">{t("header.order")}</a> -->
-    <LanguageSelector />
-    <div class="burger">Menu</div>
-  </nav>
+<header>
+  <div class="container">
+    <nav class="desktop-menu">
+      <TopNav />
+    </nav>
+    <a href={pathname}>
+      <Logo />
+    </a>
+    <MobileMenu />
+  </div>
 </header>
 
 <style>
@@ -39,87 +28,57 @@ const { pathname } = Astro.url;
     top: 0;
     left: 0; right: 0; /* centering fixed position */
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    background-color: white;
+    transition: transform 0.3s var(--easing);
+
+    & > .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      transition: padding 0.3s ease-in;
+    }
   }
   nav.desktop-menu {
     flex: 1; /* places logo in the middle */
   }
     @media (width < 769px) {
-    nav.desktop-menu {
-      display: none;
-    }
-  } 
-  header, .overlay, .mobile-menu, .burger {
+
+      header .container {
+        padding-block: 0.5rem;
+      }
+      nav.desktop-menu {
+        display: none;
+      }
+    } 
+  header {
     z-index: 1;
   }
-  nav.mobile-menu {
-    display: flex;
-    gap: var(--gutter);
-    flex: 1; /* places logo in the middle */
-    justify-content: flex-end;
-  }
-  section.container {
-    position: fixed;
-    top: 0;
-    right: 0;
-    /* width: min(100vw, 500px); */
-    min-height: 100vh;
-    max-width: 100vw; /* overriding global value */
-    width: 100vw; height: 100vh;
-    overflow-y: scroll;
-    padding: var(--gutter-l);
-    background-color: var(--c-black-99);
-    transition: all .3s ease-in-out;
-    transform: translateX(100%);
-    translate: 100%;
-
-    &.--is-visible {
-      transform: translateX(0);
-      translate: 0;
-    }
-  }
-  @media (width >= 768px) {
-    section.container {
-      grid-template-columns: 1fr 1fr;
-      padding: 10vw 30vw;
-
-      & :global(*:nth-child(3)) {
-        grid-column: 2;
-      }
-    }
-  }
-
-  div.overlay {
-      opacity: 0;
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      /* background-color: rgba(0,0,0,0.7); */
-      transform: translateX(100%);
-      translate: 100%;
-
-    &.--is-visible {
-      opacity: 1;
-      transform: translateX(0);
-      translate: 0;
-    }
-  }
+  
 </style>
 
 <script>
-  const menuElements = document.querySelectorAll('.burger, .overlay, .mobile-menu .container a');
-  const overlay = document.querySelectorAll('.overlay, .mobile-menu .container');
 
-  menuElements.forEach(item => {
-    item.addEventListener('click', () => {
-      for (const el of overlay) {
-        el.classList.toggle('--is-visible');
-      }
-    })
-  })
+  // Sticky header
+  const header = document.querySelector('header');
+  const headerContainer = document.querySelector<HTMLElement>('header > .container');
+
+  window.onscroll = function() {
+
+    if (this.oldScroll > this.scrollY || document.body.className === "mobile-menu--open" ) {
+      header.style.transform = null;
+    }
+    else {
+      header.style.transform = 'translateY(-150px)'
+    }
+    this.oldScroll = this.scrollY;
+    
+    // change the container padding
+    if ( window.scrollY > 500 && window.innerWidth >= 768 && !(document.body.className === "mobile-menu--open") ) {
+      headerContainer.style.paddingBlock = 'var(--gutter)';
+    }
+    else {
+      headerContainer.style.paddingBlock = null;
+    }
+  }
+
 </script>
