--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -18,9 +18,10 @@ changeLanguage("en");
 	<body>
 		<Header />
 		<Hero />
-		<About />
 		<DailyMenu />
+		<About />
 		<Menu />
 		<Footer />
+		<script src="../assets/js/global.js"></script>
 	</body>
 </html>
