--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -10,8 +10,9 @@
   /*colors*/
   --c-primary: hsl(120deg 19% 40%);
   --c-primary-hover: hsl(120deg 27% 25%);
-  --c-black: hsl(0 0% 25%);
-  --c-black-99: hsl(0 0% 99%);
+  --c-primary-light: hsl(120deg 19% 97%);
+  --c-grey: hsl(0 0% 25%);
+  --c-grey-light: hsl(0 0% 99%);
   /*animations*/
   --scale-out: scale3d(0.9, 0.9, 0.9);
   --scale-in: scale3d(1.2, 1.2, 1.2);
@@ -43,7 +44,7 @@ body {
   overflow-x: hidden;
   /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
   font-family: var(--font);
-  color: var(--c-black);
+  color: var(--c-grey);
 }
 section, footer {
   padding-block: var(--gutter-l);
