--- a/src/components/snippets/Address.astro
+++ b/src/components/snippets/Address.astro
@@ -1,11 +1,17 @@
 ---
 import { t } from "i18next";
 import logo from '../../assets/img/branding/invitaly_logo--small.svg'
-import instagram from '../../assets/img/icon/instagram--color.svg';
+import iconInstagram from '../../assets/img/icon/instagram--color.svg';
+import Logo from "./Logo.astro";
+
+interface Props {
+  instagram?: boolean;
+}
+const { instagram = false } = Astro.props;
 ---
 <section>
   <h3 class="small">Invitaly EnoTrattoria</h3>
-  <img class="logo" src={logo} alt="Invitaly Pizza" width="100">
+  <Logo />
   <address>
     <ul>
       <li>Vězeňská 4, 110 00 Praha, Czechia<br>
@@ -18,29 +24,23 @@ import instagram from '../../assets/img/icon/instagram--color.svg';
         <a href="mailto:enotrattoria@invitaly.cz" target="_blank">enotrattoria@invitaly.cz</a>
       </li>
     </ul>
-    <a href="https://www.instagram.com/invitaly_enotrattoria/" target="_blank" class="social-link">
-      <img src={instagram} alt="Invitaly instagram" width="28" height="28"> {t("footer.instaCaption")}
-    </a>
+    { instagram && <a href="https://www.instagram.com/invitaly_enotrattoria/" target="_blank" class="social-link">
+      <img src={iconInstagram} alt="Invitaly instagram" width="28" height="28"> {t("footer.instaCaption")}
+    </a> }
   </address>
 </section>
 
 <style>
-  /* @media (width >= 1024px) {
-    section {
-      grid-column: 7 / 11;
-    }
-  } */
-  img.logo {
-    margin-block: 1rem;
+
+  section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
-  .social-link {
+  :global(.social-link) {
     display: flex;
     gap: 1rem;
     margin-top: var(--gutter);
     line-height: 1.5;
-
-    /* & img {
-      margin-top: 0.3rem;
-    } */
   }
 </style>
